--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "dev": "vite --host :: --port 3000",
-    "build": "node tools/generate-llms.js || true && vite build",
+    "build": "node tools/run-generate-llms.cjs && vite build",
     "preview": "vite preview --host :: --port 3000"
   },
   "dependencies": {
